# test

./: README.md  TASK.md  docker-compose.yml  pre-commit.hook.py  setup.cfg
backend/: Dockerfile  docker-entrypoint.sh  flush_db_and_populate.sh  manage.py  requirements.txt  requirements_dev.txt
backend/app/: urls.py  wsgi.py
backend/app/settings/: base.py  production.py  testing.py
backend/core/: admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/core/management/commands/: populate.py
backend/core/migrations/: 0001_initial.py  0002_officespace_public.py
