[metadata]
description-file=README.md

# TODO: you are not required to use pytest but extra points if you do
# don't learn it if you don't know it, it takes some time, django test runner is fine
[tool:pytest]
addopts = --isort -rs --flake8 --durations=10 --reuse-db --tb=short backend
DJANGO_SETTINGS_MODULE = app.settings.testing

[isort]
include_trailing_comma = true
force_sort_within_sections = true
line_length=120
multi_line_output=3
indent='    '
skip = migrations,.git,settings

[flake8]
max_line_length = 120
exclude =
    build
    .git
    .tox
    00??_*.py
    settings
